added geological maps section

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -64,6 +64,21 @@ import "./main.styl";
 
 </div>
 
+[//]: # "Geological Maps"
+<div class="geologic-maps">
+  <Image className="geology-img" src="geology-bgrnd.jpg"></Image>
+  <h1 class="title map-title">Geologic Maps</h1>
+  <div class="map-info">
+    With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).
+    \
+    \
+    Are you affiliated with a state or national geologic survey? <a href="mailto:contact@macrostrat.org?Subject=Geologic%20Map%20Collaboration">Get in touch</a> with us - we'd love to collaborate and help publicize your maps!
+    \
+    \
+    Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.
+  </div>
+</div>
+
 [//]: # "Locations"
 <div class="country_container">
   <div class="country north-america">
@@ -95,22 +110,6 @@ import "./main.styl";
     </div>
   </div>
 </div>
-
-[//]: # "Geological Maps"
-<div class="geologic-maps">
-  <h1 class="title map-title">Geologic Maps</h1>
-  <div class="map-info">
-    With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).
-    \
-    \
-    Are you affiliated with a state or national geologic survey? <a href="mailto:contact@macrostrat.org?Subject=Geologic%20Map%20Collaboration">Get in touch</a> with us - we'd love to collaborate and help publicize your maps!
-    \
-    \
-    Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.
-  </div>
-</div>
-
-<Image className="rock-border" src="rocks-border.jpg"></Image>
       
 [//]: # "About"
 <div id="about">
@@ -243,150 +242,6 @@ import "./main.styl";
 <div id="api">
   <div class="api-circle"><div id="api-circle-text">API</div></div>
   <div id="api-text">All data contained in the Macrostrat database are freely available via our Application Programming Interface (API), which provides a convinient way to retrieve data for analysis or application creation. For more information head over to the <a href="/api">API root</a> to explore available routes.</div>
-</div>
-
-<Image className="rock-border" src="rocks-border.jpg"></Image>
-
-[//]: # "People"
-<div class="row slide" id="people">
-  <div class="col-xs-12 slide-container">
-    <div class="slide-content slide-content-padded">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="page-title-holder" id="contact-holder">
-            <h1 class="big">People</h1>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-6 person" id="shanan">
-          <div class="person-info">
-            <n><a href="http://strata.geology.wisc.edu" target="_blank">Shanan Peters</a></n>\
-            <t>Professor, Database Developer</t>\
-            <e>peters -at geology.wisc.edu</e>
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="daven">
-          <div class="person-info">
-            <n><a href="https://davenquinn.com" target="_blank">Daven Quinn</a></n> \
-            <t>Research Scientist, Developer</t> \
-            <e>daven.quinn -at wisc.edu</e> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="evgeny">
-          <div class="person-info">
-            <n>Evgeny Mazko</n> \
-            <t>Graduate Student</t> \
-            <e>mazko -at wisc.edu</e> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="michael">
-          <div class="person-info">
-            <n><a href="https://geoscience.wisc.edu/geoscience/people/staff/name/michael-mcclennen/" target="_blank">Michael McClennen</a></n> \
-            <t>Senior Programmer Analyst</t> \
-            <e>mmcclenn -at- geology.wisc.edu</e> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="casey">
-          <div class="person-info">
-            <n><a href="https://idzikowski-casey.github.io/personal-site/" target="_blank">Casey Idzikowski</a></n> \
-            <t>Research Specialist, Developer (former)</t> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="daniel">
-          <div class="person-info">
-            <n><a href="http://strata.geology.wisc.edu" target="_blank">Daniel Segessenmen</a></n> \
-            <t>Graduate Student (former)</t> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="shan">
-          <div class="person-info">
-            <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Shan Ye</a></n> \
-            <t>Graduate Student (former)</t> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="ben">
-          <div class="person-info">
-            <n><a href="http://strata.geology.wisc.edu" target="_blank">Ben Linzmeier</a></n> \
-            <t>Postdoctoral Scholar (former)</t> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="afiqah">
-          <div class="person-info">
-            <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Afiqah Rafi</a></n> \
-            <t>Undergrad Student (former)</t> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="sharon">
-          <div class="person-info">
-            <n><a href="http://geoscience.wisc.edu/geoscience/people/student/?id=1007" target="_blank">Sharon McMullen</a></n> \
-            <t>Researcher (former)</t> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="andrew">
-          <div class="person-info">
-            <n><a href="http://www.azstrata.org" target="_blank">Andrew Zaffos</a></n> \
-            <t>Data Mobilization and Research Scientist</t> \
-            <e>azaffos -at- email.arizona.edu</e> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="jon">
-          <div class="person-info">
-            <n><a href="http://www.jonhusson.com" target="_blank">Jon Husson</a></n> \
-            <t>Postdoctoral Researcher (former)</t> \
-            <e>jhusson - at - uvic.ca</e> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="erika">
-          <div class="person-info">
-            <n><a href="https://github.com/ItoErika" target="_blank">Erika Ito</a></n> \
-            <t>Research Intern (former)</t> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="noel">
-          <div class="person-info">
-            <n><a href="http://sedpaleo.org" target="_blank">Noel Heim</a></n> \
-            <t>Researcher (former)</t> 
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-6 person" id="john">
-          <div class="person-info">
-            <n><a href="http://www.johnjcz.com" target="_blank">John Czaplewski</a></n> \
-            <t>Next-level Developer (former)</t> 
-          </div>
-        </div>
-        <div class="col-xs-6 person" id="puneet">
-          <div class="person-info">
-            <n><a href="http://punkish.org" target="_blank">Puneet Kishor</a></n> \
-            <t>Generally Ignored</t> \
-            <e>punkish at eidesis.org</e> 
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
 </div>
 
 [//]: # "Donate"
