--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -8,12 +8,10 @@ import "./main.styl";
 <div class="nav">
   <ul>
     <li><a href="#about">About</a></li>
-    <li><a href="#apps">Apps</a></li>
     <li><a href="#api">API</a></li>
-    <li><a href="#people">People</a></li>
     <li><a href="#donate">Donate</a></li>
     <li><a href="#publications">Publications</a></li>
-    <a href="/"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
+    <a href="/dev/main-page"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
   </ul>
 </div>
 
@@ -165,74 +163,6 @@ import "./main.styl";
       Major Macrostrat data infrastructure development was supported by the US National Science Foundation (EAR-1150082, ICER-1440312), with ongoing support for data acquisition supported by NSF EAR-1948843 and ICER-1928323. Continuous and ongoing support has also been provided by the UW-Madison <a href="http://geoscience.wisc.edu/geoscience/">Department of Geoscience</a>. If you use Macrostrat and like what we do, please consider helping out with a <a href="#donate">donation</a>. Every contribute helps us to maintain infrastructure and keep improving.
     </div>
   </div>
-</div>
-
-<Image className="rock-border" src="rocks-border.jpg"></Image>
-
-[//]: # "Apps"
-<div id="apps">
-  <h1 class="big app-header">Built with Macrostrat</h1>
-
-  <a href="/sift">
-    <div class="app-box">
-      <Image className="app-img" src="logo_red.png"></Image>
-      <div class="app-background-text">
-        Sift
-        <p class="blurb">Explore Macrostrat (by Macrostrat)</p>
-      </div>
-    </div>
-  </a>
-
-  <a href="https://rockd.org">
-    <div class="app-box">
-      <Image className="app-img" src="rockd.jpg"></Image>
-      <div class="app-background-text">
-        Rockd
-        <p class="blurb">A mobile field book, Macrostrat style.</p>
-      </div>
-    </div>
-  </a>
-
-  <a href="/map">
-    <div class="app-box">
-      <Image className="app-img" src="burwell.png"></Image>
-      <div class="app-background-text">
-        Map
-        <p class="blurb">Integrating the world's geologic maps (by Macrostrat)</p>
-      </div>
-    </div>
-  </a>
-
-  <a href="https://itunes.apple.com/us/app/mancos/id541570878?mt=8" target="_blank">
-    <div class="app-box">
-      <Image className="app-img" src="mancos.jpg"></Image>
-      <div class="app-background-text">
-        Mancos
-        <p class="blurb">Explore Macrostrat and PBDB in iOS (by Hunt Mountain Software)</p>
-      </div>
-    </div>
-  </a>
-
-  <a href="http://fc.umn.edu/" target="_blank">
-    <div class="app-box">
-      <Image className="app-img" src="foc.png"></Image>
-      <div class="app-background-text">
-        FOC
-        <p class="blurb">A glass bottom jet (by Amy Myrbo, Shane Loeffler et al.)</p>
-      </div>
-    </div>
-  </a>
-
-  <a href="https://github.com/UW-Macrostrat/node-api-template">
-    <div class="app-box">
-      <Image className="app-img" src="api.png"></Image>
-      <div class="app-background-text app-background-text-small">
-        API Template
-        <p class="blurb">Foundation of all Macrostrat services (by Macrostrat)</p>
-      </div>
-    </div>
-  </a>
-
 </div>
 
 <Image className="rock-border" src="rocks-border.jpg"></Image>
