--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -7,7 +7,7 @@ import "./main.styl";
 <div class="nav">
   <ul>
     <li><a href="#about">About</a></li>
-    <li><a href="#apps">Apps</a></li>
+    <li><a href="/dev/apps">Apps</a></li>
     <li><a href="#api">API</a></li>
     <li><a href="#people">People</a></li>
     <li><a href="#donate">Donate</a></li>
