more fixes to nav bar

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -193,6 +193,7 @@ import "./main.styl";
 <div id="publications">
   <h1 id="pub-title" class="big">Publications</h1>
   <p class="blurb">literature utilizing Macrostrat</p>
+  <div class="pub-line"></div>
 
   [//]: # "NB: adding pubs to list requires updating css .pub-list counter"
   <ol class="pub-list" reversed>
@@ -282,9 +283,7 @@ import "./main.styl";
     <div class="col-sm-4" id="bottom-nav">
       <ul class="footer-nav">
         <li><a href="#about">About</a></li>
-        <li><a href="#apps">Apps</a></li>
         <li><a href="#api">API</a></li>
-        <li><a href="#people">People</a></li>
         <li><a href="#donate">Donate</a></li>
         <li><a href="#publications">Publications</a></li>
       </ul>
