added links to emails in people page

--- a/src/pages/dev/people/+Page.mdx
+++ b/src/pages/dev/people/+Page.mdx
@@ -32,7 +32,7 @@ import { Image } from "./index";
             <div class="text">
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Shanan Peters</a></n>\
                 <t>Professor, Database Developer</t> \
-                <e>peters -at geology.wisc.edu</e>
+                <a href="mailto: peters@geology.wisc.edu"><e>peters -at geology.wisc.edu</e></a>
             </div>
         </div>
 
@@ -41,7 +41,7 @@ import { Image } from "./index";
             <div class="text">
                 <n><a href="https://davenquinn.com" target="_blank">Daven Quinn</a></n> \
                 <t>Research Scientist, Developer</t> \
-                <e>daven.quinn -at wisc.edu</e> 
+                <a href="mailto: daven.quinn@wisc.edu"><e>daven.quinn -at wisc.edu</e></a>
             </div>
         </div>
 
@@ -50,7 +50,7 @@ import { Image } from "./index";
             <div class="text">
                 <n>Evgeny Mazko</n> \
                 <t>Graduate Student</t> \
-                <e>mazko -at wisc.edu</e> 
+                <a href="mailto: mazko@wisc.edu"><e>mazko -at wisc.edu</e></a>
             </div>
         </div>
             
@@ -59,7 +59,7 @@ import { Image } from "./index";
             <div class="text">
                 <n><a href="https://geoscience.wisc.edu/geoscience/people/staff/name/michael-mcclennen/" target="_blank">Michael McClennen</a></n> \
                 <t>Senior Programmer Analyst</t> \
-                <e>mmcclenn -at- geology.wisc.edu</e> 
+                <a href="mailto: mmcclenn@geology.wisc.edu"><e>mmcclenn -at- geology.wisc.edu</e></a>
             </div>
         </div>
 
@@ -118,7 +118,7 @@ import { Image } from "./index";
             <div class="text">
                 <n><a href="http://www.azstrata.org" target="_blank">Andrew Zaffos</a></n> \
                 <t>Data Mobilization and Research Scientist</t> \
-                <e>azaffos -at- email.arizona.edu</e> 
+                <a href="mailto: azaffos@email.arizona.edu"><e>azaffos -at- email.arizona.edu</e></a>
             </div>
         </div>
 
@@ -127,7 +127,7 @@ import { Image } from "./index";
             <div class="text">
                 <n><a href="http://www.jonhusson.com" target="_blank">Jon Husson</a></n> \
                 <t>Postdoctoral Researcher (former)</t> \
-                <e>jhusson - at - uvic.ca</e> 
+                <a href="mailto: jhusson@uvic.ca"><e>jhusson - at - uvic.ca</e></a>
             </div>
         </div>
 
@@ -160,7 +160,7 @@ import { Image } from "./index";
             <div class="text">
                 <n><a href="http://punkish.org" target="_blank">Puneet Kishor</a></n> \
                 <t>Generally Ignored</t> \
-                <e>punkish at eidesis.org</e> 
+                <a href="mailto: punkish@eidesis.org"><e>punkish at eidesis.org</e> </a>
             </div>
         </div>
     </div>
