added publications page

--- a/src/pages/dev/about/+Page.mdx
+++ b/src/pages/dev/about/+Page.mdx
@@ -156,12 +156,10 @@ import "./main.styl";
     </div>
     <div class="col-sm-4" id="bottom-nav">
       <ul class="footer-nav">
-        <li><a href="/dev/main-page#about">About</a></li>
-        <li><a href="/dev/main-page#api">API</a></li>
-        <li><a href="/dev/main-page#donate">Donate</a></li>
-        <li><a href="/dev/main-page#publications">Publications</a></li>
-        <li><a href="/dev/apps">Apps</a></li>
+        <li><a href="/dev/about">About</a></li>
+        <li><a href="/dev/publications">Publications</a></li>
         <li><a href="/dev/people">People</a></li>
+        <li><a href="/dev/donate">Donate</a></li>
       </ul>
     </div>
     <div class="col-sm-4 funding">
