officialize formating across pages

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -217,12 +217,10 @@ import "./main.styl";
     </div>
     <div class="col-sm-4" id="bottom-nav">
       <ul class="footer-nav">
-        <li><a href="#about">About</a></li>
-        <li><a href="#api">API</a></li>
-        <li><a href="#donate">Donate</a></li>
-        <li><a href="#publications">Publications</a></li>
-        <li><a href="/dev/apps">Apps</a></li>
+        <li><a href="/dev/about">About</a></li>
+        <li><a href="/dev/publications">Publications</a></li>
         <li><a href="/dev/people">People</a></li>
+        <li><a href="/dev/donate">Donate</a></li>
       </ul>
     </div>
     <div class="col-sm-4 funding">
