--- a/src/pages/dev/people/+Page.mdx
+++ b/src/pages/dev/people/+Page.mdx
@@ -8,12 +8,10 @@ import { Image } from "./index";
 [//]: # "Nav Bar"
 <div class="nav">
   <ul>
-    <li><a href="/dev/main-page#about">About</a></li>
-    <li><a href="/dev/main-page#api">API</a></li>
-    <li><a href="/dev/main-page#donate">Donate</a></li>
-    <li><a href="/dev/main-page#publications">Publications</a></li>
-    <li><a href="/dev/apps">Apps</a></li>
+    <li><a href="/dev/about">About</a></li>
+    <li><a href="/dev/publications">Publications</a></li>
     <li><a href="/dev/people">People</a></li>
+    <li><a href="/dev/donate">Donate</a></li>
     <a href="/dev/main-page"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
   </ul>
 </div>
@@ -175,12 +173,10 @@ import { Image } from "./index";
     </div>
     <div class="col-sm-4" id="bottom-nav">
         <ul class="footer-nav">
-        <li><a href="/dev/main-page#about">About</a></li>
-        <li><a href="/dev/main-page#api">API</a></li>
-        <li><a href="/dev/main-page#donate">Donate</a></li>
-        <li><a href="/dev/main-page#publications">Publications</a></li>
-        <li><a href="/dev/apps">Apps</a></li>
+        <li><a href="/dev/about">About</a></li>
+        <li><a href="/dev/publications">Publications</a></li>
         <li><a href="/dev/people">People</a></li>
+        <li><a href="/dev/donate">Donate</a></li>
         </ul>
     </div>
     <div class="col-sm-4 funding">
