added version number

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -20,7 +20,10 @@ import "./main.styl";
   <div class="left">
     <Image className="back-img cover-image" src="cover_large.jpg"></Image>
     <div class="text">
-      <h1 class="big">Macrostrat</h1>
+      <span class="header">
+        <h1 id="main-title" class="big">Macrostrat</h1>
+        <h2 class="version">v2</h2>
+      </span>
       <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
       <ul class="buttons1">
         <li><a type="button" class="btn" href="/sift/#/">Search</a></li>
