--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -2,16 +2,17 @@ import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
 import { Image } from "./index";
 import "./main.styl";
+import { MacrostratIcon } from "~/components";
 
 <div id="total">
 [//]: # "Nav Bar"
 <div class="nav">
   <ul>
+    <li><a href="/dev/main-page"><MacrostratIcon></MacrostratIcon></a></li>
     <li><a href="/dev/about">About</a></li>
     <li><a href="/dev/publications">Publications</a></li>
     <li><a href="/dev/people">People</a></li>
     <li><a href="/dev/donate">Donate</a></li>
-    <a href="/dev/main-page"><Image className="nav-logo" src="logo_white.png" width="40px"></Image></a>
   </ul>
 </div>
 
