--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -22,8 +22,7 @@ import { MacrostratIcon } from "~/components";
     <Image className="back-img cover-image" src="cover_large.jpg"></Image>
     <div class="text">
       <span class="header">
-        <h1 id="main-title" class="big">Macrostrat</h1>
-        <h2 class="version">v2</h2>
+        <h1 id="main-title" class="big">Macrostrat<h2 class="version">v2</h2></h1>
       </span>
       <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
       <ul class="buttons1">
@@ -82,34 +81,30 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Locations"
-<div class="country_container">
-  <div class="country north-america">
-    <Image className="img country-image" src="north_america_med.jpg"></Image>
-    <div class="text">
-      <h1>North America</h1>\
-      <div class="caption">7,239 packages. 24,141 units. 48,696 collections.</div>
+<div id="locations">
+  <div class="location">
+    <Image className="location-img t1" src="north_america_med.jpg"></Image>
+    <div class="location-text">
+      North America
     </div>
   </div>
-  <div class="country caribbean">
-    <Image className="img country-image" src="caribbean_new_medium.jpg"></Image>
-    <div class="text">
-      <h1>Caribbean</h1>\
-      <div class="caption">243 packages. 798 units. 897 collections.</div>
+  <div class="location">
+    <div class="location-text">
+      New Zealand
+    </div>
+    <Image className="location-img t2" src="north_america_med.jpg"></Image>
+  </div>
+  <div class="location">
+    <Image className="location-img t1" src="north_america_med.jpg"></Image>
+    <div class="location-text">
+      Caribbean
     </div>
   </div>
-  <div class="country new-zealand">
-    <Image className="img country-image" src="new_zealand_new_medium.jpg"></Image>
-    <div class="text">
-      <h1>New Zealand</h1>\
-      <div class="caption">828 packages. 2,168 units. 328 collections.</div>
+  <div class="location">
+    <div class="location-text">
+      Deep Sea
     </div>
-  </div>
-  <div class="country deep-sea">
-    <Image className="img country-image" src="deep_sea_new_medium.jpg"></Image>
-    <div class="text">
-      <h1>Deep Sea</h1>\
-      <div class="caption">388 packages. 7,124 units. 0 collections.</div>
-    </div>
+    <Image className="location-img t2" src="north_america_med.jpg"></Image>
   </div>
 </div>
 
