changed layout of images

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -87,24 +87,20 @@ import { MacrostratIcon } from "~/components";
     <div class="location-text">
       North America
     </div>
+    <Image className="location-img t2" src="caribbean_new_medium.jpg"></Image>
+    <div class="location-text">
+      Carribean
+    </div>
   </div>
   <div class="location">
     <div class="location-text">
       New Zealand
     </div>
-    <Image className="location-img t2" src="north_america_med.jpg"></Image>
-  </div>
-  <div class="location">
-    <Image className="location-img t1" src="north_america_med.jpg"></Image>
-    <div class="location-text">
-      Caribbean
-    </div>
-  </div>
-  <div class="location">
+    <Image className="location-img t1" src="new_zealand_new_medium.jpg"></Image>
     <div class="location-text">
       Deep Sea
     </div>
-    <Image className="location-img t2" src="north_america_med.jpg"></Image>
+    <Image className="location-img t2" src="deep_sea_new_medium.jpg"></Image>
   </div>
 </div>
 
