--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -85,20 +85,24 @@ import { MacrostratIcon } from "~/components";
   <div class="location">
     <Image className="location-img t1" src="north_america_med.jpg"></Image>
     <div class="location-text">
-      North America
+      <h1>North America</h1>
+      <div class="caption">243 packages. 798 units. 897 collections.</div>
     </div>
     <Image className="location-img t2" src="caribbean_new_medium.jpg"></Image>
     <div class="location-text">
-      Carribean
+      <h1>Carribean</h1>
+      <div class="caption">243 packages. 798 units. 897 collections.</div>
     </div>
   </div>
   <div class="location">
     <div class="location-text">
-      New Zealand
+      <h1>New Zealand</h1>
+      <div class="caption">828 packages. 2,168 units. 328 collections.</div>
     </div>
     <Image className="location-img t1" src="new_zealand_new_medium.jpg"></Image>
     <div class="location-text">
-      Deep Sea
+      <h1>Deep Sea</h1>
+      <div class="caption">388 packages. 7,124 units. 0 collections.</div>
     </div>
     <Image className="location-img t2" src="deep_sea_new_medium.jpg"></Image>
   </div>
