added lexicon subpage

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -80,6 +80,21 @@ import { MacrostratIcon } from "~/components";
   </div>
 </div>
 
+[//]: # "Map Interface"
+
+
+[//]: # "Maps"
+
+
+[//]: # "Columns"
+
+
+[//]: # "Geolofic Lexicon"
+
+
+[//]: # "Projects"
+
+
 [//]: # "Locations"
 <div id="locations">
   <div class="location">
