added basic links to pages

--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -81,19 +81,39 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Map Interface"
-
+<div id="map">
+  <a href="/map">
+    <h1>Map Interface</h1>
+  </a>
+</div>
 
 [//]: # "Maps"
-
+<div id="maps">
+  <a href="/maps">
+    <h1>Maps</h1>
+  </a>
+</div>
 
 [//]: # "Columns"
+<div id="columns">
+  <a href="/columns">
+    <h1>Columns</h1>
+  </a>
+</div>
 
-
-[//]: # "Geolofic Lexicon"
-
+[//]: # "Geologic Lexicon"
+<div id="lexicon">
+  <a href="/dev/lexicon">
+    <h1>Geologic Lexicon</h1>
+  </a>
+</div>
 
 [//]: # "Projects"
-
+<div id="project">
+  <a href="/projects">
+    <h1>Projects</h1>
+  </a>
+</div>
 
 [//]: # "Locations"
 <div id="locations">
