--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -65,11 +65,12 @@ import { MacrostratIcon } from "~/components";
 
 </div>
 
-[//]: # "Geological Maps"
-<div class="geologic-maps">
-  <Image className="geology-img" src="geology-bgrnd.jpg"></Image>
-  <h1 class="title map-title">Geologic Maps</h1>
-  <div class="map-info">
+[//]: # "Map Interface"
+<div id="map">
+  <a href="/map">
+    <h1>Map Interface</h1>
+  </a>
+  <p>
     With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).
     \
     \
@@ -77,14 +78,7 @@ import { MacrostratIcon } from "~/components";
     \
     \
     Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.
-  </div>
-</div>
-
-[//]: # "Map Interface"
-<div id="map">
-  <a href="/map">
-    <h1>Map Interface</h1>
-  </a>
+  </p>
 </div>
 
 [//]: # "Maps"
@@ -92,6 +86,9 @@ import { MacrostratIcon } from "~/components";
   <a href="/maps">
     <h1>Maps</h1>
   </a>
+  <p>
+    The spatial footprint of rocks on the Earth's surface
+  </p>
 </div>
 
 [//]: # "Columns"
@@ -99,13 +96,19 @@ import { MacrostratIcon } from "~/components";
   <a href="/columns">
     <h1>Columns</h1>
   </a>
+  <p>
+    Stratigraphic and geological columns showing the organization of rocks in time
+  </p>
 </div>
 
 [//]: # "Geologic Lexicon"
 <div id="lexicon">
-  <a href="/dev/lexicon">
+  <a href="/lex">
     <h1>Geologic Lexicon</h1>
   </a>
+  <p>
+    Geologic units and data dictionaries
+  </p>
 </div>
 
 [//]: # "Projects"
@@ -113,6 +116,9 @@ import { MacrostratIcon } from "~/components";
   <a href="/projects">
     <h1>Projects</h1>
   </a>
+  <p>
+    Projects for specific regions or geological problems
+  </p>
 </div>
 
 [//]: # "Locations"
