--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -66,56 +66,54 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Map Interface"
-<div id="map">
-  <a href="/map">
-    <h1>Map Interface</h1>
-  </a>
-  <p>
-    With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).
+<div class="temp-class" id="map">
+  <div class="link-title">
+    <a href="/map"><h1>Map Interface</h1></a>
+  </div>
+  <p class="long">
+    <div class="temp">With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).</div>
     \
+    <div class="temp">Are you affiliated with a state or national geologic survey? <a href="mailto:contact@macrostrat.org?Subject=Geologic%20Map%20Collaboration">Get in touch</a> with us - we'd love to collaborate and help publicize your maps!</div>
     \
-    Are you affiliated with a state or national geologic survey? <a href="mailto:contact@macrostrat.org?Subject=Geologic%20Map%20Collaboration">Get in touch</a> with us - we'd love to collaborate and help publicize your maps!
-    \
-    \
-    Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.
+    <div class="temp"> Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.</div>
   </p>
 </div>
 
 [//]: # "Maps"
-<div id="maps">
-  <a href="/maps">
-    <h1>Maps</h1>
-  </a>
+<div class="temp-class" id="maps">
+  <div class="link-title">
+    <a href="/maps"><h1>Maps</h1></a>
+  </div>
   <p>
     The spatial footprint of rocks on the Earth's surface
   </p>
 </div>
 
 [//]: # "Columns"
-<div id="columns">
-  <a href="/columns">
-    <h1>Columns</h1>
-  </a>
+<div class="temp-class" id="columns">
+  <div class="link-title">
+    <a href="/columns"><h1>Columns</h1></a>
+  </div>
   <p>
     Stratigraphic and geological columns showing the organization of rocks in time
   </p>
 </div>
 
 [//]: # "Geologic Lexicon"
-<div id="lexicon">
-  <a href="/lex">
-    <h1>Geologic Lexicon</h1>
-  </a>
+<div class="temp-class" id="lexicon">
+  <div class="link-title">
+    <a href="/lex"><h1>Geologic Lexicon</h1></a>
+  </div>
   <p>
     Geologic units and data dictionaries
   </p>
 </div>
 
 [//]: # "Projects"
-<div id="project">
-  <a href="/projects">
-    <h1>Projects</h1>
-  </a>
+<div class="temp-class" id="project">
+  <div class="link-title">
+    <a href="/projects"><h1>Projects</h1></a>
+  </div>
   <p>
     Projects for specific regions or geological problems
   </p>
