--- a/src/pages/dev/main-page/+Page.mdx
+++ b/src/pages/dev/main-page/+Page.mdx
@@ -17,53 +17,43 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Start Page"
-<div class="parent">
-  <div class="left">
+<div class="start">
     <Image className="back-img cover-image" src="cover_large.jpg"></Image>
     <div class="text">
       <span class="header">
-        <h1 id="main-title" class="big">Macrostrat</h1>
+        <h1 class="big" id="main-title">Macrostrat</h1>
         <h2 class="version">v2</h2>
       </span>
+      <div class="stats">
+        <div class="stat">
+          <span class="top-stat" id="n_columns">1,400</span>
+          <span class="top-stat-label">Regional Rock Columns</span>
+        </div>
+        <div class="stat">
+          <span class="top-stat" id="n_units">33,903</span>
+          <span class="top-stat-label">Rock Units</span>
+        </div>
+        <div class="stat">
+          <span class="top-stat" id="n_polys">2,500,000</span>
+          <span class="top-stat-label">Geologic Map Polygons</span>
+        </div>
+        <div class="stat">
+          <span class="top-stat" id="n_names">51,212</span>
+          <span class="top-stat-label"><a href="Macrostrat_strat_names.html" target="_blank">Stratigraphic Names</a></span>
+        </div>
+      </div>
       <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
-      <ul class="buttons1">
-        <li><a type="button" class="btn" href="/sift/#/">Search</a></li>
-        <li><a type="button" class="btn" href="/map/#3/40.78/-94.13">Geologic Map</a></li>
-        <li><div type="button" class="btn rockd" onclick="window.location='https://rockd.org'">
+      <div class="buttons1">
+        <a type="button" class="btn" href="/sift/#/">Search</a>
+        <a type="button" class="btn" href="/map/#3/40.78/-94.13">Geologic Map</a>
+        <div type="button" class="btn rockd" onclick="window.location='https://rockd.org'">
           <div class="rockd-button-container">
             <Image src="rockd.jpg" width="22px" className="rockd-png"></Image>
             <a href="https://rockd.org" target="_blank">Go mobile</a>
           </div>
-        </div></li>
-      </ul>
+        </div>
+      </div>
     </div>
-  </div>
-  
-
-  <div class="right">
-    <Image className="back-img sea-image" src="deep_sea_new_medium.jpg"></Image>
-    <div class="text">
-      <ul class="stats-row">
-        <li>
-          <span class="top-stat" id="n_columns">1,400</span>
-          <span class="top-stat-label">Regional Rock Columns</span>
-        </li>
-        <li>
-          <span class="top-stat" id="n_units">33,903</span>
-          <span class="top-stat-label">Rock Units</span>
-        </li>
-        <li>
-          <span class="top-stat" id="n_polys">2,500,000</span>
-          <span class="top-stat-label">Geologic Map Polygons</span>
-        </li>
-        <li>
-          <span class="top-stat" id="n_names">51,212</span>
-          <span class="top-stat-label"><a href="Macrostrat_strat_names.html" target="_blank">Stratigraphic Names</a></span>
-        </li>
-      </ul>
-    </div>
-  </div>
-
 </div>
 
 [//]: # "Geological Maps"
@@ -116,7 +106,7 @@ import { MacrostratIcon } from "~/components";
 [//]: # "Donate"
 <div class="donate-container" id="donate">
   <Image className="back-img donate-img" src="donate_medium.jpg"></Image>
-  <div class="text">
+  <div class="text-donate">
     <div class="donate-left">
       <h1 class="title donate-title"><a href="https://secure.supportuw.org/give/?id=E0A03FA3-B2A0-431C-83EE-A121A04EEB5D" target="_blank">Donate Now</a></h1>
     </div>
