changed links and formalized formatting

--- a/src/pages/dev/test-site/publications/+Page.mdx
+++ b/src/pages/dev/test-site/publications/+Page.mdx
@@ -4,14 +4,16 @@ import "./main.styl";
 import { Image } from "./index";
 import { MacrostratIcon } from "~/components";
 
+<div id="container">
+
 [//]: # "Nav Bar"
 <div class="nav">
   <ul>
-    <li><a href="/dev/main-page"><MacrostratIcon></MacrostratIcon></a></li>
-    <li><a href="/dev/about">About</a></li>
-    <li><a href="/dev/publications">Publications</a></li>
-    <li><a href="/dev/people">People</a></li>
-    <li><a href="/dev/donate">Donate</a></li>
+    <li><a href="/dev/test-site/main-page"><MacrostratIcon></MacrostratIcon></a></li>
+    <li><a href="/dev/test-site/about">About</a></li>
+    <li><a href="/dev/test-site/publications">Publications</a></li>
+    <li><a href="/dev/test-site/people">People</a></li>
+    <li><a href="/dev/test-site/donate">Donate</a></li>
   </ul>
 </div>
 
@@ -108,10 +110,10 @@ import { MacrostratIcon } from "~/components";
     </div>
     <div class="col-sm-4" id="bottom-nav">
       <ul class="footer-nav">
-        <li><a href="/dev/about">About</a></li>
-        <li><a href="/dev/publications">Publications</a></li>
-        <li><a href="/dev/people">People</a></li>
-        <li><a href="/dev/donate">Donate</a></li>
+        <li><a href="/dev/test-site/about">About</a></li>
+        <li><a href="/dev/test-site/publications">Publications</a></li>
+        <li><a href="/dev/test-site/people">People</a></li>
+        <li><a href="/dev/test-site/donate">Donate</a></li>
       </ul>
     </div>
     <div class="col-sm-4 funding">
@@ -124,4 +126,5 @@ import { MacrostratIcon } from "~/components";
       </div>
     </div>
   </div>
+</div>
 </div>
