--- a/src/pages/dev/test-site/donate/+Page.mdx
+++ b/src/pages/dev/test-site/donate/+Page.mdx
@@ -7,11 +7,11 @@ import { MacrostratIcon } from "~/components";
 [//]: # "Nav Bar"
 <div class="nav">
   <ul>
-    <li><a href="/dev/main-page"><MacrostratIcon></MacrostratIcon></a></li>
-    <li><a href="/dev/about">About</a></li>
-    <li><a href="/dev/publications">Publications</a></li>
-    <li><a href="/dev/people">People</a></li>
-    <li><a href="/dev/donate">Donate</a></li>
+    <li><a href="/dev/test-site/main-page"><MacrostratIcon></MacrostratIcon></a></li>
+    <li><a href="/dev/test-site/about">About</a></li>
+    <li><a href="/dev/test-site/publications">Publications</a></li>
+    <li><a href="/dev/test-site/people">People</a></li>
+    <li><a href="/dev/test-site/donate">Donate</a></li>
   </ul>
 </div>
 
@@ -39,10 +39,10 @@ import { MacrostratIcon } from "~/components";
     </div>
     <div class="col-sm-4" id="bottom-nav">
       <ul class="footer-nav">
-        <li><a href="/dev/about">About</a></li>
-        <li><a href="/dev/publications">Publications</a></li>
-        <li><a href="/dev/people">People</a></li>
-        <li><a href="/dev/donate">Donate</a></li>
+        <li><a href="/dev/test-site/about">About</a></li>
+        <li><a href="/dev/test-site/publications">Publications</a></li>
+        <li><a href="/dev/test-site/people">People</a></li>
+        <li><a href="/dev/test-site/donate">Donate</a></li>
       </ul>
     </div>
     <div class="col-sm-4 funding">
