--- a/src/pages/dev/test-site/people/+Page.mdx
+++ b/src/pages/dev/test-site/people/+Page.mdx
@@ -9,15 +9,13 @@ import { MacrostratIcon } from "~/components";
 [//]: # "Nav Bar"
 <div class="nav">
   <ul>
-    <li><a href="/dev/main-page"><MacrostratIcon></MacrostratIcon></a></li>
-    <li><a href="/dev/about">About</a></li>
-    <li><a href="/dev/publications">Publications</a></li>
-    <li><a href="/dev/people">People</a></li>
-    <li><a href="/dev/donate">Donate</a></li>
+    <li><a href="/dev/test-site/main-page"><MacrostratIcon></MacrostratIcon></a></li>
+    <li><a href="/dev/test-site/about">About</a></li>
+    <li><a href="/dev/test-site/publications">Publications</a></li>
+    <li><a href="/dev/test-site/people">People</a></li>
+    <li><a href="/dev/test-site/donate">Donate</a></li>
   </ul>
 </div>
-\
-\
 
 [//]: # "People"
 <h1 class="big">People</h1>
@@ -174,10 +172,10 @@ import { MacrostratIcon } from "~/components";
     </div>
     <div class="col-sm-4" id="bottom-nav">
         <ul class="footer-nav">
-        <li><a href="/dev/about">About</a></li>
-        <li><a href="/dev/publications">Publications</a></li>
-        <li><a href="/dev/people">People</a></li>
-        <li><a href="/dev/donate">Donate</a></li>
+        <li><a href="/dev/test-site/about">About</a></li>
+        <li><a href="/dev/test-site/publications">Publications</a></li>
+        <li><a href="/dev/test-site/people">People</a></li>
+        <li><a href="/dev/test-site/donate">Donate</a></li>
         </ul>
     </div>
     <div class="col-sm-4 funding">
