updated dev homepage

--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -12,6 +12,5 @@ import { PageBreadcrumbs } from "~/renderer";
 - [Map filter](/dev/filtering)
 - [Concept apps](/dev/concepts)
 - [Built with Macrostrat](/dev/apps)
-- [People](/dev/people)
-- [Main Page](/dev/main-page)
+- [Test Site](/dev/test-site/main-page)
 
