--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -1,6 +1,6 @@
 import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
-import { Image } from "./index";
+import { Image } from "../index";
 import "./main.styl";
 import { MacrostratIcon } from "~/components";
 
