--- a/src/pages/dev/test-site/people/+Page.mdx
+++ b/src/pages/dev/test-site/people/+Page.mdx
@@ -1,7 +1,7 @@
 import { PageHeader } from "~/components";
 import { PageBreadcrumbs } from "~/renderer";
 import "./main.styl";
-import { Image } from "./index";
+import { Image } from "../index";
 import { MacrostratIcon } from "~/components";
 
 <div class="main">
