made navbar function

--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -1,20 +1,14 @@
 import { PageHeader } from "~/components";
 import { LinkCard } from "~/components/cards";
-import { Image } from "../index";
+import { Image, Navbar, Footer } from "../index";
 import "./main.styl";
+import "../main.styl";
 import { MacrostratIcon } from "~/components";
 
 <div id="total">
+
 [//]: # "Nav Bar"
-<div class="nav">
-  <ul>
-    <li><a href="/dev/test-site/main-page"><MacrostratIcon></MacrostratIcon></a></li>
-    <li><a href="/dev/test-site/about">About</a></li>
-    <li><a href="/dev/test-site/publications">Publications</a></li>
-    <li><a href="/dev/test-site/people">People</a></li>
-    <li><a href="/dev/test-site/donate">Donate</a></li>
-  </ul>
-</div>
+<Navbar></Navbar>
 
 [//]: # "Start Page"
 <div class="parent">
