--- a/src/pages/dev/test-site/publications/+Page.mdx
+++ b/src/pages/dev/test-site/publications/+Page.mdx
@@ -1,21 +1,14 @@
 import { PageHeader } from "~/components";
 import { PageBreadcrumbs } from "~/renderer";
+import { Image, Navbar, Footer } from "../index";
 import "./main.styl";
-import { Image } from "../index";
+import "../main.styl";
 import { MacrostratIcon } from "~/components";
 
 <div id="container">
 
 [//]: # "Nav Bar"
-<div class="nav">
-  <ul>
-    <li><a href="/dev/test-site/main-page"><MacrostratIcon></MacrostratIcon></a></li>
-    <li><a href="/dev/test-site/about">About</a></li>
-    <li><a href="/dev/test-site/publications">Publications</a></li>
-    <li><a href="/dev/test-site/people">People</a></li>
-    <li><a href="/dev/test-site/donate">Donate</a></li>
-  </ul>
-</div>
+<Navbar></Navbar>
 
 [//]: # "Publications"
 <div id="publications">
