--- a/src/pages/dev/test-site/people/+Page.mdx
+++ b/src/pages/dev/test-site/people/+Page.mdx
@@ -156,30 +156,6 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Footer"
-<div class="footer">
-    <div class="footer-container">
-    <div class="col-sm-4" id="who-made-it">
-        <Image className="logo_white" src="logo_white.png" width="100px"></Image>
-        <p class="f1-text">Produced by the <a href="http://strata.geology.wisc.edu" target="_blank">UW Macrostrat Lab</a> <a href="https://github.com/UW-Macrostrat" target="_blank"><Image className="git_logo" src="git-logo.png" width="18px"></Image></a></p>
-    </div>
-    <div class="col-sm-4" id="bottom-nav">
-        <ul class="footer-nav">
-        <li><a href="/dev/test-site/about">About</a></li>
-        <li><a href="/dev/test-site/publications">Publications</a></li>
-        <li><a href="/dev/test-site/people">People</a></li>
-        <li><a href="/dev/test-site/donate">Donate</a></li>
-        </ul>
-    </div>
-    <div class="col-sm-4 funding">
-        <Image className="funding-logo" src="nsf.png" width="100px"></Image>
-        <div class="funding-line">
-        Current support: \
-        EAR-1948843 \
-        ICER-1928323 \
-        UW-Madison Dept. Geoscience
-        </div>
-    </div>
-    </div>
-</div>
+<Footer></Footer>
 
 </div>
