--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -10,3 +10,4 @@ import { PageBreadcrumbs } from "~/renderer";
 - [User interface tests](/dev/ui-tests)
 - [Feedback](/dev/feedback)
 - [Map filter](/dev/filtering)
+- [CDR Tileserver](/dev/maps)
