--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -1,5 +1,4 @@
 import { PageHeader } from "~/components";
-import { LinkCard } from "~/components/cards";
 import { Image, Navbar, Footer } from "../index";
 import "./main.styl";
 import "../main.styl";
@@ -49,7 +48,6 @@ import { MacrostratIcon } from "~/components";
     </div>
 </div>
 
-
 [//]: # "Locations"
 <div id="locations">
   <div class="location">
@@ -79,7 +77,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Map Interface"
-<div class="temp-class" id="map">
+<div class="card basic-card">
   <div class="link-title">
     <a href="/map"><h1>Map Interface</h1></a>
   </div>
@@ -93,7 +91,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Maps"
-<div class="temp-class" id="maps">
+<div class="card basic-card">
   <div class="link-title">
     <a href="/maps"><h1>Maps</h1></a>
   </div>
@@ -103,7 +101,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Columns"
-<div class="temp-class" id="columns">
+<div class="card basic-card">
   <div class="link-title">
     <a href="/columns"><h1>Columns</h1></a>
   </div>
@@ -113,7 +111,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Geologic Lexicon"
-<div class="temp-class" id="lexicon">
+<div class="card basic-card">
   <div class="link-title">
     <a href="/lex"><h1>Geologic Lexicon</h1></a>
   </div>
@@ -123,7 +121,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Projects"
-<div class="temp-class" id="project">
+<div class="card basic-card">
   <div class="link-title">
     <a href="/projects"><h1>Projects</h1></a>
   </div>
@@ -134,7 +132,7 @@ import { MacrostratIcon } from "~/components";
 
 
 [//]: # "Donate"
-<div class="donate-container" id="donate">
+<div class="card donate-container" id="donate">
   <Image className="back-img donate-img" src="donate_medium.jpg"></Image>
   <div class="text-donate">
     <div class="donate-left">
