--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -10,6 +10,7 @@ import { MacrostratIcon } from "~/components";
 <Navbar></Navbar>
 
 [//]: # "Start Page"
+<div class="card">
 <div class="start">
     <Image className="back-img cover-image" src="cover_large.jpg"></Image>
     <div class="text">
@@ -47,33 +48,33 @@ import { MacrostratIcon } from "~/components";
       </div>
     </div>
 </div>
+</div>
 
 [//]: # "Locations"
-<div id="locations">
-  <div class="location">
-    <Image className="location-img t1" src="north_america_med.jpg"></Image>
-    <div class="location-text">
-      <h1>North America</h1>
-      <div class="caption">243 packages. 798 units. 897 collections.</div>
-    </div>
-    <Image className="location-img t2" src="caribbean_new_medium.jpg"></Image>
-    <div class="location-text">
-      <h1>Carribean</h1>
-      <div class="caption">243 packages. 798 units. 897 collections.</div>
-    </div>
+<div class="card location-card">
+  <Image className="card-image top" src="north_america_med.jpg"></Image>
+  <div class="location-text">
+    <h1>North America</h1>
+    <p>243 packages. 798 units. 897 collections.</p>
   </div>
-  <div class="location">
-    <div class="location-text">
-      <h1>New Zealand</h1>
-      <div class="caption">828 packages. 2,168 units. 328 collections.</div>
-    </div>
-    <Image className="location-img t1" src="new_zealand_new_medium.jpg"></Image>
-    <div class="location-text">
-      <h1>Deep Sea</h1>
-      <div class="caption">388 packages. 7,124 units. 0 collections.</div>
-    </div>
-    <Image className="location-img t2" src="deep_sea_new_medium.jpg"></Image>
+
+  <div class="location-text">
+    <h1>Carribean</h1>
+    <p>243 packages. 798 units. 897 collections.</p>
   </div>
+  <Image className="card-image" src="caribbean_new_medium.jpg"></Image>
+
+  <Image className="card-image" src="new_zealand_new_medium.jpg"></Image>
+  <div class="location-text">
+    <h1>New Zealand</h1>
+    <p>828 packages. 2,168 units. 328 collections.</p>
+  </div>
+
+  <div class="location-text">
+    <h1>Deep Sea</h1>
+    <p>388 packages. 7,124 units. 0 collections.</p>
+  </div>
+  <Image className="card-image bottom" src="deep_sea_new_medium.jpg"></Image>
 </div>
 
 [//]: # "Map Interface"
