--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -17,6 +17,7 @@ import { MacrostratIcon } from "~/components";
       <span class="header">
         <h1 id="main-title" class="big">Macrostrat<h2 class="version">v2</h2></h1>
       </span>
+      <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
       <div class="stats">
         <div class="stat">
           <span class="top-stat" id="n_columns">1,400</span>
@@ -35,19 +36,29 @@ import { MacrostratIcon } from "~/components";
           <span class="top-stat-label"><a href="Macrostrat_strat_names.html" target="_blank">Stratigraphic Names</a></span>
         </div>
       </div>
-      <p class="big-text">A platform for geological data exploration, integration, and analysis</p>
-      <div class="buttons1">
-        <a type="button" class="btn" href="/sift/#/">Search</a>
-        <a type="button" class="btn" href="/map/#3/40.78/-94.13">Geologic Map</a>
-        <div type="button" class="btn rockd" onclick="window.location='https://rockd.org'">
-          <div class="rockd-button-container">
-            <Image src="rockd.jpg" width="22px" className="rockd-png"></Image>
-            <a href="https://rockd.org" target="_blank">Go mobile</a>
-          </div>
-        </div>
-      </div>
     </div>
 </div>
+</div>
+
+[//]: # "Map Interface"
+<div class="card map-card">
+  <p>
+    <div class="temp">With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).</div>
+    \
+    <div class="temp">Are you affiliated with a state or national geologic survey? <a href="mailto:contact@macrostrat.org?Subject=Geologic%20Map%20Collaboration">Get in touch</a> with us - we'd love to collaborate and help publicize your maps!</div>
+    \
+    <div class="temp"> Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.</div>
+    <div class="buttons1">
+      <a type="button" class="btn" href="/map/#3/40.78/-94.13">Geologic Map</a>
+      <a type="button" class="btn" href="/sift/#/">Search</a>
+    </div>
+  </p>
+</div>
+
+[//]: # "Mobile"
+<div class="card mobile-card">
+  <Image src="rockd.jpg" width="22px" className="rockd-png"></Image>
+  <h1><a href="https://rockd.org" target="_blank">Go mobile!</a></h1>
 </div>
 
 [//]: # "Locations"
@@ -75,20 +86,6 @@ import { MacrostratIcon } from "~/components";
     <p>388 packages. 7,124 units. 0 collections.</p>
   </div>
   <Image className="card-image bottom" src="deep_sea_new_medium.jpg"></Image>
-</div>
-
-[//]: # "Map Interface"
-<div class="card basic-card">
-  <div class="link-title">
-    <a href="/map"><h1>Map Interface</h1></a>
-  </div>
-  <p class="long">
-    <div class="temp">With over 225 maps from data providers around the world across every scale, Macrostrat is the world's largest homogenized geologic map database. Our data processing pipeline links geologic map polygons to Macrostrat column polygons, external stratigraphic name lexicons, and geochronological intervals, enabling the enhancement of the original map data and allowing for direct links into <a href="https://xdd.wisc.edu" target="_blank">xDD</a> (formly GeoDeepDive).</div>
-    \
-    <div class="temp">Are you affiliated with a state or national geologic survey? <a href="mailto:contact@macrostrat.org?Subject=Geologic%20Map%20Collaboration">Get in touch</a> with us - we'd love to collaborate and help publicize your maps!</div>
-    \
-    <div class="temp"> Get started by <a href="/map">exploring the map</a> or <a href="/map/sources">taking a look at</a> which maps are currently a part of Macrostrat.</div>
-  </p>
 </div>
 
 [//]: # "Maps"
