--- a/src/pages/dev/test-site/people/+Page.mdx
+++ b/src/pages/dev/test-site/people/+Page.mdx
@@ -16,7 +16,7 @@ import { MacrostratIcon } from "~/components";
 
 <div class="people" id="people">
     <div class="left">
-        <div class="person-info" id="shanan">
+        <div class="person-info card" id="shanan">
             <Image className="back-img" src="shanan.jpg"></Image>
             <div class="text">
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Shanan Peters</a></n>\
@@ -25,7 +25,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="daven">
+        <div class="person-info card" id="daven">
             <Image className="back-img" src="daven.jpg"></Image>
             <div class="text">
                 <n><a href="https://davenquinn.com" target="_blank">Daven Quinn</a></n> \
@@ -34,7 +34,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="evgeny">
+        <div class="person-info card" id="evgeny">
             <Image className="back-img" src="evgeny.jpg"></Image>
             <div class="text">
                 <n>Evgeny Mazko</n> \
@@ -43,7 +43,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
             
-        <div class="person-info" id="michael">
+        <div class="person-info card" id="michael">
             <Image className="back-img" src="michael.jpg"></Image>
             <div class="text">
                 <n><a href="https://geoscience.wisc.edu/geoscience/people/staff/name/michael-mcclennen/" target="_blank">Michael McClennen</a></n> \
@@ -52,7 +52,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="casey">
+        <div class="person-info card" id="casey">
         <Image className="back-img" src="casey.jpg"></Image>
             <div class="text">
                 <n><a href="https://idzikowski-casey.github.io/personal-site/" target="_blank">Casey Idzikowski</a></n> \
@@ -60,7 +60,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="daniel">
+        <div class="person-info card" id="daniel">
         <Image className="back-img" src="daniel.jpg"></Image>
             <div class="text">
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Daniel Segessenmen</a></n> \
@@ -68,7 +68,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="shan">
+        <div class="person-info card" id="shan">
         <Image className="back-img" src="shan.jpg"></Image>
             <div class="text">
                 <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Shan Ye</a></n> \
@@ -76,7 +76,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="ben">
+        <div class="person-info card" id="ben">
         <Image className="back-img" src="ben.jpg"></Image>
             <div class="text">
                 <n><a href="http://strata.geology.wisc.edu" target="_blank">Ben Linzmeier</a></n> \
@@ -86,7 +86,7 @@ import { MacrostratIcon } from "~/components";
     </div>
 
     <div class="right">
-        <div class="person-info" id="afiqah">
+        <div class="person-info card" id="afiqah">
         <Image className="back-img" src="afiqah.jpg"></Image>
             <div class="text">
                 <n><a href="https://www.wisc.edu/directories/person.php?name=Victoria+Khoo&email=vkhoo%40wisc.edu&query=victoria%20khoo" target="_blank">Afiqah Rafi</a></n> \
@@ -94,7 +94,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="sharon">
+        <div class="person-info card" id="sharon">
         <Image className="back-img" src="sharon.jpg"></Image>
             <div class="text">
                 <n><a href="http://geoscience.wisc.edu/geoscience/people/student/?id=1007" target="_blank">Sharon McMullen</a></n> \
@@ -102,7 +102,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="andrew">
+        <div class="person-info card" id="andrew">
         <Image className="back-img" src="andrew.jpg"></Image>
             <div class="text">
                 <n><a href="http://www.azstrata.org" target="_blank">Andrew Zaffos</a></n> \
@@ -111,7 +111,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="jon">
+        <div class="person-info card" id="jon">
         <Image className="back-img" src="jon.jpg"></Image>
             <div class="text">
                 <n><a href="http://www.jonhusson.com" target="_blank">Jon Husson</a></n> \
@@ -120,7 +120,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="erika">
+        <div class="person-info card" id="erika">
         <Image className="back-img" src="erika.jpg"></Image>
             <div class="text">
                 <n><a href="https://github.com/ItoErika" target="_blank">Erika Ito</a></n> \
@@ -128,7 +128,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="noel">
+        <div class="person-info card" id="noel">
         <Image className="back-img" src="noel.jpg"></Image>
             <div class="text">
                 <n><a href="http://sedpaleo.org" target="_blank">Noel Heim</a></n> \
@@ -136,7 +136,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="john">
+        <div class="person-info card" id="john">
         <Image className="back-img" src="john.jpg"></Image>
             <div class="text">
                 <n><a href="http://www.johnjcz.com" target="_blank">John Czaplewski</a></n> \
@@ -144,7 +144,7 @@ import { MacrostratIcon } from "~/components";
             </div>
         </div>
 
-        <div class="person-info" id="puneet">
+        <div class="person-info card" id="puneet">
         <Image className="back-img" src="puneet.jpg"></Image>
             <div class="text">
                 <n><a href="http://punkish.org" target="_blank">Puneet Kishor</a></n> \
