--- a/src/pages/dev/test-site/donate/+Page.mdx
+++ b/src/pages/dev/test-site/donate/+Page.mdx
@@ -9,7 +9,7 @@ import { MacrostratIcon } from "~/components";
 <Navbar></Navbar>
 
 [//]: # "Donate"
-<div class="donate-container" id="donate">
+<div class="donate-container card" id="donate">
   <Image className="back-img donate-img" src="donate_medium.jpg"></Image>
   <div class="text">
     <div class="donate-left">
