--- a/src/pages/dev/test-site/publications/+Page.mdx
+++ b/src/pages/dev/test-site/publications/+Page.mdx
@@ -11,7 +11,7 @@ import { MacrostratIcon } from "~/components";
 <Navbar></Navbar>
 
 [//]: # "Publications"
-<div id="publications">
+<div class="card" id="publications">
   <h1 id="pub-title" class="big">Publications</h1>
   <p class="blurb">literature utilizing Macrostrat</p>
   <div class="pub-line"></div>
