changes spacing of start

--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -10,7 +10,7 @@ import { MacrostratIcon } from "~/components";
 <Navbar></Navbar>
 
 [//]: # "Start Page"
-<div class="card">
+<div class="card start-card">
 <div class="start">
     <Image className="back-img cover-image" src="cover_large.jpg"></Image>
     <div class="text">
