donate card link

--- a/src/pages/dev/test-site/donate/+Page.mdx
+++ b/src/pages/dev/test-site/donate/+Page.mdx
@@ -11,9 +11,10 @@ import { MacrostratIcon } from "~/components";
 [//]: # "Donate"
 <div class="donate-container" id="donate">
   <Image className="back-img donate-img" src="donate_medium.jpg"></Image>
+  <a href="https://secure.supportuw.org/give/?id=E0A03FA3-B2A0-431C-83EE-A121A04EEB5D" target="_blank">
   <div class="text">
     <div class="donate-left">
-      <h1 class="title donate-title"><a href="https://secure.supportuw.org/give/?id=E0A03FA3-B2A0-431C-83EE-A121A04EEB5D" target="_blank">Donate Now</a></h1>
+      <h1 class="title donate-title">Donate Now</h1>
     </div>
     <div class="donate-right">
       <div class="donate-info">
@@ -21,6 +22,7 @@ import { MacrostratIcon } from "~/components";
       </div>
     </div>
   </div>
+  </a>
 </div>
 
 [//]: # "Footer"
