--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -51,6 +51,9 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Locations"
+<div class="section">
+  <h1>Locations</h1>
+</div>
 <div class="card location-card">
   <Image className="card-image top" src="north_america_med.jpg"></Image>
   <div class="location-text">
@@ -75,6 +78,12 @@ import { MacrostratIcon } from "~/components";
     <p>388 packages. 7,124 units. 0 collections.</p>
   </div>
   <Image className="card-image bottom" src="deep_sea_new_medium.jpg"></Image>
+</div>
+
+[//]: # "Data Products"
+<div class="section">
+  <h1>Data products</h1>
+  <h2>Macrostrat integrates a variety of geological data products into a community-accessibe, space-time model of the Earth's crust. These products come from a variety of sources throughout the geosciences.</h2>
 </div>
 
 [//]: # "Map Interface"
