--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -80,12 +80,6 @@ import { MacrostratIcon } from "~/components";
   <Image className="card-image bottom" src="deep_sea_new_medium.jpg"></Image>
 </div>
 
-[//]: # "Data Products"
-<div class="section">
-  <h1>Data products</h1>
-  <h2>Macrostrat integrates a variety of geological data products into a community-accessibe, space-time model of the Earth's crust. These products come from a variety of sources throughout the geosciences.</h2>
-</div>
-
 [//]: # "Map Interface"
 <div class="card basic-card">
   <div class="link-title">
@@ -100,8 +94,16 @@ import { MacrostratIcon } from "~/components";
   </p>
 </div>
 
+[//]: # "Data Products"
+<div class="section">
+  <h1>Data products</h1>
+  <h2>Macrostrat integrates a variety of geological data products into a community-accessibe, space-time model of the Earth's crust. These products come from a variety of sources throughout the geosciences.</h2>
+</div>
+
+<div class="card-set">
+
 [//]: # "Maps"
-<div class="card basic-card">
+<div class="basic-card left-card">
   <div class="link-title">
     <a href="/maps"><h1>Maps</h1></a>
   </div>
@@ -111,7 +113,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Columns"
-<div class="card basic-card">
+<div class="basic-card right-card">
   <div class="link-title">
     <a href="/columns"><h1>Columns</h1></a>
   </div>
@@ -121,7 +123,7 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Geologic Lexicon"
-<div class="card basic-card">
+<div class="basic-card left-card">
   <div class="link-title">
     <a href="/lex"><h1>Geologic Lexicon</h1></a>
   </div>
@@ -131,13 +133,15 @@ import { MacrostratIcon } from "~/components";
 </div>
 
 [//]: # "Projects"
-<div class="card basic-card">
+<div class="basic-card right-card">
   <div class="link-title">
     <a href="/projects"><h1>Projects</h1></a>
   </div>
   <p>
     Projects for specific regions or geological problems
   </p>
+</div>
+
 </div>
 
 
