--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -10,6 +10,7 @@ import { PageBreadcrumbs } from "~/renderer";
 - [User interface tests](/dev/ui-tests)
 - [Feedback](/dev/feedback)
 - [Map filter](/dev/filtering)
+- [Sources](/dev/sources)
 
 - [Concept apps](/dev/concepts)
 - [Built with Macrostrat](/dev/apps)
