fix api section and made cards

--- a/src/pages/dev/test-site/about/+Page.mdx
+++ b/src/pages/dev/test-site/about/+Page.mdx
@@ -11,12 +11,11 @@ import { MacrostratIcon } from "~/components";
 <div id="body">
   
 [//]: # "About"
-<div id="about">
-  <h1 class="big" id="about-title">
+<h1 class="big" id="about-title">
     About
     <div class="line"></div>
-  </h1>
-  
+</h1>
+<div id="about">
   <div class="about-row">
     <div class="about-body-subtitle">
       Summary
@@ -66,9 +65,12 @@ import { MacrostratIcon } from "~/components";
   </div>
 </div>
 
+<Image className="rock-border" src="rocks-border.jpg"></Image>
+
+
 [//]: # "API"
 <div id="api">
-  <div class="api-circle"><div id="api-circle-text">API</div></div>
+  <Image src="api2.png" className="api-image"></Image>
   <div id="api-text">All data contained in the Macrostrat database are freely available via our Application Programming Interface (API), which provides a convinient way to retrieve data for analysis or application creation. For more information head over to the <a href="/api">API root</a> to explore available routes.</div>
 </div>
 
