pre upstream merge

--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -75,7 +75,7 @@ import { MacrostratIcon } from "~/components";
   </div>
   <div class="location">
     <div class="location-text">
-      <h1>Carribean</h1>
+      <h1>Caribbean</h1>
       <p>243 packages. 798 units. 897 collections.</p>
     </div>
     <Image className="card-image" src="caribbean_new_medium.jpg"></Image>
