Enhance CDR Maps

--- a/src/pages/dev/+Page.mdx
+++ b/src/pages/dev/+Page.mdx
@@ -10,7 +10,7 @@ import { PageBreadcrumbs } from "~/renderer";
 - [User interface tests](/dev/ui-tests)
 - [Feedback](/dev/feedback)
 - [Map filter](/dev/filtering)
-- [CDR Tileserver](/dev/maps)
+- [CDR Tileserver](/dev/cdr-maps)
 - [Sources](/dev/sources)
 
 - [Concept apps](/dev/concepts)
